k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: api
      containers:
        - name: api
          image: us-central1-docker.pkg.dev/rad-containers-hmed/cloud-canvas/api:latest
          imagePullPolicy: Always
          resources:
            # Autopilot minimums / defaults
            requests:
              memory: "1000Mi"
              cpu: "1000m"
            # limits:
            #   memory: "512Mi"
            #   cpu: "500m"
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
