k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api2
  annotations:
    cloud.google.com/neg: '{"ingress": true, "exposed_ports": {"8000":{}}}'
spec:
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
