k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  # annotations:
  #   kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
  # annotations:
  #   kubernetes.io/ingress.global-static-ip-name: ADDRESS_NAME
  #   networking.gke.io/managed-certificates: managed-cert
  #   kubernetes.io/ingress.class:"gce"
spec:
  defaultBackend:
    service:
      name: api
      port:
        number: 8000
